Refactor SkillObtainmentService to ResearchService; Fixes #742

--- a/src/main/resources/me/minotopia/expvp/error_de.properties
+++ b/src/main/resources/me/minotopia/expvp/error_de.properties
@@ -5,6 +5,7 @@
 # This work is protected by international copyright laws and licensed
 # under the license terms which can be found at src/main/resources/LICENSE.txt.
 #
-internal=§4§lInterner Fehler: §c
+internal=§4§lInterner Fehler: §c{0}
+tree.missing-parent=Du musst zuerst {1} erforschen, bevor du {0} erforschen kannst.
 tree.skill-not-in-tree=Fehlender Skill {0} im Skilltree {1}, bitte versuche es später erneut.
-user=§c§lFehler: §c
+user=§c§lFehler: §c{0}
