Add consumeTalentPoints method to TalentPointService -> ResearchService

--- a/src/main/resources/me/minotopia/expvp/error_de.properties
+++ b/src/main/resources/me/minotopia/expvp/error_de.properties
@@ -6,6 +6,7 @@
 # under the license terms which can be found at src/main/resources/LICENSE.txt.
 #
 internal=§4§lInterner Fehler: §c{0}
+tp.insufficient-tp=Du brauchst dafür {0} Talentpunkte, hast aber nur {1}.
 tree.missing-parent=Du musst zuerst {1} erforschen, bevor du {0} erforschen kannst.
 tree.skill-not-in-tree=Fehlender Skill {0} im Skilltree {1}, bitte versuche es später erneut.
 user=§c§lFehler: §c{0}
