Add basic league support; Fixes #590

--- a/src/main/resources/me/minotopia/expvp/core_de.properties
+++ b/src/main/resources/me/minotopia/expvp/core_de.properties
@@ -7,4 +7,13 @@
 #
 
 expvp=Expvp
+format.broadcast=§6[§7Exp§6] {0}
 player.prefixed-name={1} {0}
+format.error-internal=§4§lInterner Fehler: §c{0}
+format.error-user=§c§lFehler: §c{0}
+format.warning=§e§lAchtung: §e
+format.result=§e§l➩ §6{0}
+format.result-success=§e§l➩ §a{0}
+format.list-header=§e§l➩ §e{0}
+format.list-item=§e§l-➩ §6{0}
+format.header=§a»»» §e{0} §a«««
