--- a/src/main/resources/me/minotopia/expvp/error_de.properties
+++ b/src/main/resources/me/minotopia/expvp/error_de.properties
@@ -5,8 +5,9 @@
 # This work is protected by international copyright laws and licensed
 # under the license terms which can be found at src/main/resources/LICENSE.txt.
 #
-internal=§4§lInterner Fehler: §c{0}
+db.hibernate-misc=Fehler bei der Kommunikation mit der Datenbank.
+db.hibernate-rollback=Fehler bei der Kommunikation mit der Datenbank, Rollback.
+db.other=Fehler während der Kommunikation mit der Datenbank.
 tp.insufficient-tp=Du brauchst dafür {0} Talentpunkte, hast aber nur {1}.
 tree.missing-parent=Du musst zuerst {1} erforschen, bevor du {0} erforschen kannst.
 tree.skill-not-in-tree=Fehlender Skill {0} im Skilltree {1}, bitte versuche es später erneut.
-user=§c§lFehler: §c{0}
