--- a/src/main/resources/me/minotopia/expvp/score_de.properties
+++ b/src/main/resources/me/minotopia/expvp/score_de.properties
@@ -5,4 +5,21 @@
 # This work is protected by international copyright laws and licensed
 # under the license terms which can be found at src/main/resources/LICENSE.txt.
 #
+kill.broadcast=§6[§7Exp§6] §7{0} §6hat §7{1} §6getötet.
 tp.actionbar={0} Talentpunkte - Nächster nach {1} Kills
+kill.tp.many=Du hast für diesen Kill {0} Talentpunkte bekommen.
+tp.kill.one=Du hast für diesen Kill einen Talentpunkt bekommen.
+league.WOOD.name=§7[Holz]
+league.STONE.name=§7[§8Stein§7]
+league.EMERALD.name=§7[§2Smaragd§7]
+league.DIAMOND.name=§7[§bDiamant§7]
+league.OBSIDIAN.name=§7[§2Obsidian§7]
+league.BEDROCK.name=§7[§c§lBedrock§7]
+league.WOOD.chat-format={1} {0}: §f{2}
+league.STONE.chat-format={1} {0}: §f{2}
+league.EMERALD.chat-format={1} {0}: §f{2}
+league.DIAMOND.chat-format={1} {0}: §b§l>>> §f{2}
+league.OBSIDIAN.chat-format={1} {0}: §2§l>>> §f{2}
+league.BEDROCK.chat-format={1} {0}: §c§l>§0§l>§c§l> §f{2}
+league.change.up=Du wurdest aufgrund deiner Kampfkünste in die Liga {0} heraufgestuft. Herzlichen Glückwunsch!
+league.change.down=Du wurdest in die Liga {0} zurückgestuft.
