Show Exp rewards to killer/victim

--- a/src/main/resources/me/minotopia/expvp/score_de.properties
+++ b/src/main/resources/me/minotopia/expvp/score_de.properties
@@ -6,9 +6,8 @@
 # under the license terms which can be found at src/main/resources/LICENSE.txt.
 #
 kill.broadcast=§6[§7Exp§6] §7{0} §6hat §7{1} §6getötet.
-tp.actionbar={0} Talentpunkte - Nächster nach {1} Kills
-kill.tp.many=Du hast für diesen Kill {0} Talentpunkte bekommen.
-tp.kill.one=Du hast für diesen Kill einen Talentpunkt bekommen.
+tp.status=§aDu hast jetzt {0} und bekommst nach {1} den nächsten.
+tp.actionbar.gain=§a+ {0}
 league.WOOD.name=§7[Holz]
 league.STONE.name=§7[§8Stein§7]
 league.EMERALD.name=§7[§2Smaragd§7]
@@ -23,3 +22,11 @@ league.OBSIDIAN.chat-format={1} {0}: §1§l>>> §f{2}
 league.BEDROCK.chat-format={1} {0}: §c§l>§0§l>§c§l> §f{2}
 league.change.up=Du wurdest aufgrund deiner Kampfkünste in die Liga {0} heraufgestuft. Herzlichen Glückwunsch!
 league.change.down=Du wurdest in die Liga {0} zurückgestuft.
+tp.singular=Talentpunkt
+tp.plural=Talentpunkte
+tp.actionbar.lose=§c- {0}
+kill.one=Kill
+kill.many=Kills
+tp.actionbar=§e{0} - nächster nach {1}
+kill.victim=Du wurdest getötet und verlierst daher {0} Exp.
+kill.culprit=Du hast jemanden getötet und dafür {0} Exp bekommen.
