--- a/src/main/resources/me/minotopia/expvp/core_de.properties
+++ b/src/main/resources/me/minotopia/expvp/core_de.properties
@@ -17,3 +17,4 @@ format.result-success=§e§l➩ §a{0}
 format.list-header=§e§l➩ §e{0}
 format.list-item=§e§l-➩ §6{0}
 format.header=§a»»» §e{0} §a«««
+plural-base={0} {1}
