--- a/src/main/resources/me/minotopia/expvp/core_de.properties
+++ b/src/main/resources/me/minotopia/expvp/core_de.properties
@@ -18,3 +18,4 @@ format.list-header=§e§l➩ §e{0}
 format.list-item=§e§l-➩ §6{0}
 format.header=§a»»» §e{0} §a«««
 plural-base={0} {1}
+research.success=§aDu hast erfolgreich {0} §aerforscht.
