--- a/src/main/resources/me/minotopia/expvp/score_de.properties
+++ b/src/main/resources/me/minotopia/expvp/score_de.properties
@@ -22,8 +22,8 @@ league.OBSIDIAN.chat-format={1} {0}: §1§l>>> §f{2}
 league.BEDROCK.chat-format={1} {0}: §c§l>§0§l>§c§l> §f{2}
 league.change.up=Du wurdest aufgrund deiner Kampfkünste in die Liga {0} heraufgestuft. Herzlichen Glückwunsch!
 league.change.down=Du wurdest in die Liga {0} zurückgestuft.
-tp.singular=Talentpunkt
-tp.plural=Talentpunkte
+tp.one=Talentpunkt
+tp.many=Talentpunkte
 tp.actionbar.lose=§c- {0}
 kill.one=Kill
 kill.many=Kills
