Fix death message having two prefixes

--- a/src/main/resources/me/minotopia/expvp/score_de.properties
+++ b/src/main/resources/me/minotopia/expvp/score_de.properties
@@ -5,7 +5,7 @@
 # This work is protected by international copyright laws and licensed
 # under the license terms which can be found at src/main/resources/LICENSE.txt.
 #
-kill.broadcast=§6[§7Exp§6] §7{0} §6hat §7{1} §6getötet.
+kill.broadcast=§7{0} §6hat §7{1} §6getötet.
 tp.status=§aDu hast jetzt {0} und bekommst nach {1} den nächsten.
 tp.actionbar.gain=§a+ {0}
 league.WOOD.name=§7[Holz]
