--- a/src/main/resources/me/minotopia/expvp/score_de.properties
+++ b/src/main/resources/me/minotopia/expvp/score_de.properties
@@ -7,7 +7,7 @@
 #
 kill.broadcast=§7{0} §6hat §7{1} §6getötet.
 tp.status=§aDu hast jetzt {0} und bekommst nach {1} den nächsten.
-tp.actionbar.gain=§a+ {0}
+tp.actionbar.gain=§2+ {0}
 league.WOOD.name=§7[Holz]
 league.STONE.name=§7[§8Stein§7]
 league.EMERALD.name=§7[§2Smaragd§7]
@@ -24,7 +24,7 @@ league.change.up=Du wurdest aufgrund deiner Kampfkünste in die Liga {0} heraufg
 league.change.down=Du wurdest in die Liga {0} zurückgestuft.
 tp.one=Talentpunkt
 tp.many=Talentpunkte
-tp.actionbar.lose=§c- {0}
+tp.actionbar.lose=§4- {0}
 kill.one=Kill
 kill.many=Kills
 tp.actionbar=§e{0} - nächster nach {1}
