Proper pluralisation for InsufficientTalentPointsException

--- a/src/main/resources/me/minotopia/expvp/error_de.properties
+++ b/src/main/resources/me/minotopia/expvp/error_de.properties
@@ -8,6 +8,6 @@
 db.hibernate-misc=Fehler bei der Kommunikation mit der Datenbank.
 db.hibernate-rollback=Fehler bei der Kommunikation mit der Datenbank, Rollback.
 db.other=Fehler während der Kommunikation mit der Datenbank.
-tp.insufficient-tp=Du brauchst dafür {0} Talentpunkte, hast aber nur {1}.
+tp.insufficient-tp=Du brauchst dafür {0}, hast aber nur {1}.
 tree.missing-parent=Du musst zuerst {1} erforschen, bevor du {0} erforschen kannst.
 tree.skill-not-in-tree=Fehlender Skill {0} im Skilltree {1}, bitte versuche es später erneut.
