--- a/src/main/resources/me/minotopia/expvp/error_de.properties
+++ b/src/main/resources/me/minotopia/expvp/error_de.properties
@@ -9,5 +9,5 @@ db.hibernate-misc=Fehler bei der Kommunikation mit der Datenbank.
 db.hibernate-rollback=Fehler bei der Kommunikation mit der Datenbank, Rollback.
 db.other=Fehler während der Kommunikation mit der Datenbank.
 tp.insufficient-tp=Du brauchst dafür {0}, hast aber nur {1}.
-tree.missing-parent=Du musst zuerst {1} erforschen, bevor du {0} erforschen kannst.
+tree.missing-parent=§cDu musst zuerst {1} §cerforschen, bevor du {0} §cerforschen kannst.
 tree.skill-not-in-tree=Fehlender Skill {0} im Skilltree {1}, bitte versuche es später erneut.
