Add respawn service; Fixes #763

--- a/src/main/resources/me/minotopia/expvp/core_de.properties
+++ b/src/main/resources/me/minotopia/expvp/core_de.properties
@@ -5,7 +5,6 @@
 # This work is protected by international copyright laws and licensed
 # under the license terms which can be found at src/main/resources/LICENSE.txt.
 #
-
 expvp=Expvp
 format.broadcast=§6[§7Exp§6] {0}
 player.prefixed-name={1} {0}
@@ -19,3 +18,6 @@ format.list-item=§e§l-➩ §6{0}
 format.header=§a»»» §e{0} §a«««
 plural-base={0} {1}
 research.success=§aDu hast erfolgreich {0} §aerforscht.
+respawn.delay-start=Du kannst in fünf Sekunden mit dem 'Bett verlassen'-Knopf weiterspielen.
+respawn.delay-wait=Du kannst noch nicht weiterspielen. Bitte warte noch kurz.
+respawn.delay-end=Du kannst jetzt weiterspielen.
