Change respawn to use spectator mode instead of non-working beds; Fixes #763

--- a/src/main/resources/me/minotopia/expvp/core_de.properties
+++ b/src/main/resources/me/minotopia/expvp/core_de.properties
@@ -18,6 +18,5 @@ format.list-item=§e§l-➩ §6{0}
 format.header=§a»»» §e{0} §a«««
 plural-base={0} {1}
 research.success=§aDu hast erfolgreich {0} §aerforscht.
-respawn.delay-start=Du kannst in fünf Sekunden mit dem 'Bett verlassen'-Knopf weiterspielen.
-respawn.delay-wait=Du kannst noch nicht weiterspielen. Bitte warte noch kurz.
+respawn.delay-start=Du kannst in fünf Sekunden weiterspielen.
 respawn.delay-end=Du kannst jetzt weiterspielen.
