Teleport players to map spawn upon respawn

--- a/src/main/resources/me/minotopia/expvp/core_de.properties
+++ b/src/main/resources/me/minotopia/expvp/core_de.properties
@@ -20,3 +20,4 @@ plural-base={0} {1}
 research.success=§aDu hast erfolgreich {0} §aerforscht.
 respawn.delay-start=Du kannst in fünf Sekunden weiterspielen.
 respawn.delay-end=Du kannst jetzt weiterspielen.
+respawn.no-spawn=Du konntest nicht teleportiert werden, da es keine Map gibt.
