Translate object admin commands; #755 #757

--- a/src/main/resources/me/minotopia/expvp/core_de.properties
+++ b/src/main/resources/me/minotopia/expvp/core_de.properties
@@ -21,3 +21,5 @@ research.success=§aDu hast erfolgreich {0} §aerforscht.
 respawn.delay-start=Du kannst in fünf Sekunden weiterspielen.
 respawn.delay-end=Du kannst jetzt weiterspielen.
 respawn.no-spawn=Du konntest nicht teleportiert werden, da es keine Map gibt.
+yes=ja
+no=nein
