--- a/src/main/resources/me/minotopia/expvp/error_de.properties
+++ b/src/main/resources/me/minotopia/expvp/error_de.properties
@@ -8,6 +8,13 @@
 db.hibernate-misc=Fehler bei der Kommunikation mit der Datenbank.
 db.hibernate-rollback=Fehler bei der Kommunikation mit der Datenbank, Rollback.
 db.other=Fehler während der Kommunikation mit der Datenbank.
+inv.invalid-slot=Invalide Slot-ID: "{0}"
+player.multiple=Deine Anfrage trifft auf mehrere Spieler zu. Versuche eine Abfrage nach UUID.
+player.unknown=Dieser Spieler ist unbekannt: "{0}"
+reg.already-exists=Es gibt bereits einen {0} mit der ID "{1}".
+reg.error-saving=Fehler beim Speichern vom {0} mit der ID "{0}"
+reg.there-is-no=Es gibt keinen {0} mit der ID "{1}"
+skill.handlerspec-slash=HandlerSpecs müssen mit / beginnen.
 tp.insufficient-tp=Du brauchst dafür {0}, hast aber nur {1}.
 tree.missing-parent=§cDu musst zuerst {1} §cerforschen, bevor du {0} §cerforschen kannst.
 tree.skill-not-in-tree=Fehlender Skill {0} im Skilltree {1}, bitte versuche es später erneut.
