Add I18n support to skill and tree UI; Fixes #755

--- a/src/main/resources/me/minotopia/expvp/admin_de.properties
+++ b/src/main/resources/me/minotopia/expvp/admin_de.properties
@@ -34,3 +34,23 @@ spawn.spawn=Spawn
 spawn.prop.loc=Position
 spawn.prop.author=Autor
 reg.created=Neuer {0} mit der ID "{1}" erstellt.
+ui.skilledit.item-name=§e§lSkill ändern
+ui.skilledit.success=Skill erfolgreich geändert.
+ui.skilledit.clicktoedit=§eKlicken zum Bearbeiten
+ui.skilledit.change-add-lore=§a{0}\
+\
+§eHier klicken zum Bearbeiten
+ui.skilledit.subskill-title=§eSubskill {0}:
+ui.skilledit.remove-children-first=§cZuerst Subskills\
+§centfernen, bevor dieser\
+§centfernt werden kann.
+ui.skilledit.click-to-remove=§aKlicken zum Entfernen
+ui.skilledit.click-to-add=§aKlicken zum Hinzufügen
+ui.skilledit.rm-children-first=Du musst zuerst die Subskills dieses Skills entfernen, bevor du ihn entfernen kannst.
+ui.skilledit.rm-subskill-success=Subskill erfolgreich entfernt.
+ui.skillsel.title=§9§lSkill auswählen §9({0}/{1})
+ui.skilledit.unrederable=Dieser Skilltree konnte nicht vollständig dargestellt werden.\
+Spieler können ihn daher nicht sehen! Bitte entferne den\
+äußersten Skill und versuche es nochmal. (Dies sollte nicht passieren)
+ui.skilledit.add-subskill-success=Subskill erfolgreich hinzugefügt.
+ui.skilledit.unable-to-save=Konnte Skilltree nicht speichern.
