--- a/src/main/resources/me/minotopia/expvp/core_de.properties
+++ b/src/main/resources/me/minotopia/expvp/core_de.properties
@@ -23,3 +23,15 @@ respawn.delay-end=Du kannst jetzt weiterspielen.
 respawn.no-spawn=Du konntest nicht teleportiert werden, da es keine Map gibt.
 yes=ja
 no=nein
+unknown=unbekannt
+research.already=\
+§aDu hast diesen Skill\
+§abereits erforscht.
+research.notyet=\
+§cDu kannst diesen Skill\
+§anoch nicht erforschen.
+research.possible=\
+§eDu kannst diesen Skill\
+§efür {0} erforschen.
+inv.back-button=<< §6§lzurück
+tree-select.title=§e§lSkilltrees
