--- a/src/main/resources/me/minotopia/expvp/error_de.properties
+++ b/src/main/resources/me/minotopia/expvp/error_de.properties
@@ -17,4 +17,7 @@ reg.there-is-no=Es gibt keinen {0} mit der ID "{1}"
 skill.handlerspec-slash=HandlerSpecs müssen mit / beginnen.
 tp.insufficient-tp=Du brauchst dafür {0}, hast aber nur {1}.
 tree.missing-parent=§cDu musst zuerst {1} §cerforschen, bevor du {0} §cerforschen kannst.
-tree.skill-not-in-tree=Fehlender Skill {0} im Skilltree {1}, bitte versuche es später erneut.
+tree.missing-value=An dieser Stelle befindet sich kein Skill, bitte versuche es später erneut.
+tree.prevented-render-fail=Diese Aktion ist nicht duchführbar, weil danach dieser Skilltree nicht mehr in ein Inventar passt.
+tree.render-fail=Konnte Skilltree nicht darstellen.
+
