Add message pointing to language files for admin commands

--- a/src/main/resources/me/minotopia/expvp/admin_de.properties
+++ b/src/main/resources/me/minotopia/expvp/admin_de.properties
@@ -54,3 +54,5 @@ Spieler können ihn daher nicht sehen! Bitte entferne den\
 äußersten Skill und versuche es nochmal. (Dies sollte nicht passieren)
 ui.skilledit.add-subskill-success=Subskill erfolgreich hinzugefügt.
 ui.skilledit.unable-to-save=Konnte Skilltree nicht speichern.
+skill.info.lang-files=Du kannst die Namen in den Dateien lang/skill.properties und lang/skill_de.properties im Pluginordner einstellen.
+tree.info.lang-files=Du kannst die Namen in den Dateien lang/tree.properties und lang/tree_de.properties im Pluginordner einstellen.
