--- a/src/main/resources/me/minotopia/expvp/core_de.properties
+++ b/src/main/resources/me/minotopia/expvp/core_de.properties
@@ -24,14 +24,14 @@ respawn.no-spawn=Du konntest nicht teleportiert werden, da es keine Map gibt.
 yes=ja
 no=nein
 unknown=unbekannt
-research.already=\
-§aDu hast diesen Skill\
+research.already=\n\
+§aDu hast diesen Skill\n\
 §abereits erforscht.
-research.notyet=\
-§cDu kannst diesen Skill\
+research.notyet=\n\
+§cDu kannst diesen Skill\n\
 §anoch nicht erforschen.
-research.possible=\
-§eDu kannst diesen Skill\
+research.possible=\n\
+§eDu kannst diesen Skill\n\
 §efür {0} erforschen.
 inv.back-button=<< §6§lzurück
 tree-select.title=§e§lSkilltrees
