Add boss bar spawn display service; Fixes #747

--- a/src/main/resources/me/minotopia/expvp/core_de.properties
+++ b/src/main/resources/me/minotopia/expvp/core_de.properties
@@ -35,3 +35,4 @@ research.possible=\n\
 §efür {0} erforschen.
 inv.back-button=<< §6§lzurück
 tree-select.title=§e§lSkilltrees
+spawn.bossbar-format=§6Aktuelle Map: §e{0} §6- Nächste in §e{0} Minuten
