--- a/src/main/resources/me/minotopia/expvp/core_de.properties
+++ b/src/main/resources/me/minotopia/expvp/core_de.properties
@@ -35,4 +35,6 @@ research.possible=\n\
 §efür {0} erforschen.
 inv.back-button=<< §6§lzurück
 tree-select.title=§e§lSkilltrees
-spawn.bossbar-format=§6Aktuelle Map: §e{0} §6- Nächste in §e{0} Minuten
+minute.one=Minute
+minute.many=Minuten
+spawn.chat-reminder=In {0} wird eine neue Map ausgewählt. Vergiss nicht, bis dahin
