--- a/src/main/resources/me/minotopia/expvp/spawn_de.properties
+++ b/src/main/resources/me/minotopia/expvp/spawn_de.properties
@@ -7,3 +7,4 @@
 #
 # Note that actual spawn names are configured by the administrator in this bundle's override file.
 bossbar-format=§6Aktuelle Map: §e{0} §6- Nächste in §e{0} Minuten
+vote.chat-reminder=In {0} wird eine neue Map ausgewählt. Vergiss nicht, bis dahin mit /mv zu wählen!
