--- a/src/main/resources/me/minotopia/expvp/spawn_de.properties
+++ b/src/main/resources/me/minotopia/expvp/spawn_de.properties
@@ -7,3 +7,11 @@
 #
 bossbar-format=§6Aktuelle Map: §e{0} §6- Nächste in §e{1} Minuten
 vote.chat-reminder=In {0} wird eine neue Map ausgewählt. Vergiss nicht, bis dahin mit /mv zu wählen!
+vote.header=Du kannst diese Maps wählen:
+vote.no-spawns=Entschuldige, aber es gibt noch keine Maps.
+vote.spawn-button=[Diese Map wählen]
+vote.spawn-item={0} §e({1})
+vote.vote.many=Stimmen
+vote.vote.one=Stimme
+vote.voted=Deine Stimme für {0} wurde aufgezeichnet.
+vote.see-at-spawn=Am Spawn findest du Bilder von den Maps.
