Add linking mechanism for map vote buttons; Fixes #801
Note that the buttons don't have any effect for now

--- a/src/main/resources/me/minotopia/expvp/admin_de.properties
+++ b/src/main/resources/me/minotopia/expvp/admin_de.properties
@@ -56,3 +56,5 @@ ui.skilledit.add-subskill-success=Subskill erfolgreich hinzugefügt.
 ui.skilledit.unable-to-save=Konnte Skilltree nicht speichern.
 skill.info.lang-files=Du kannst die Namen in den Dateien lang/skill.properties und lang/skill_de.properties im Pluginordner einstellen.
 tree.info.lang-files=Du kannst die Namen in den Dateien lang/tree.properties und lang/tree_de.properties im Pluginordner einstellen.
+spawn.link.session-start=Betätige jetzt den Knopf, den du verlinken möchtest.
+spawn.unlink.session-start=Betätige jetzt den Knopf, den du entlinken möchtest.
