Add vote button listener; Fixes #802

--- a/src/main/resources/me/minotopia/expvp/admin_de.properties
+++ b/src/main/resources/me/minotopia/expvp/admin_de.properties
@@ -58,3 +58,4 @@ skill.info.lang-files=Du kannst die Namen in den Dateien lang/skill.properties u
 tree.info.lang-files=Du kannst die Namen in den Dateien lang/tree.properties und lang/tree_de.properties im Pluginordner einstellen.
 spawn.link.session-start=Betätige jetzt den Knopf, den du verlinken möchtest.
 spawn.unlink.session-start=Betätige jetzt den Knopf, den du entlinken möchtest.
+spawn.link.done=Verlinkung erfolgreich.
