Fix vote button response format

--- a/src/main/resources/me/minotopia/expvp/spawn_de.properties
+++ b/src/main/resources/me/minotopia/expvp/spawn_de.properties
@@ -13,5 +13,5 @@ vote.spawn-button=[Diese Map wählen]
 vote.spawn-item={0} §e({1})
 vote.vote.many=Stimmen
 vote.vote.one=Stimme
-vote.voted=Deine Stimme für {0} wurde aufgezeichnet.
+vote.voted=§aDeine Stimme für {0} §awurde aufgezeichnet.
 vote.see-at-spawn=Am Spawn findest du Bilder von den Maps.
