Add basic implementation of a main menu; Fixes #793

--- a/src/main/resources/me/minotopia/expvp/core_de.properties
+++ b/src/main/resources/me/minotopia/expvp/core_de.properties
@@ -38,4 +38,28 @@ tree-select.title=§e§lSkilltrees
 minute.one=Minute
 minute.many=Minuten
 plural-none=keine
+inv.main.title=§e§lExpvp Hauptmenü
+inv.main.armor-link=§ebald!
+inv.main.armor-reset-link=§ebald!
+inv.main.no-friend=§7Du hast keinen Freund.\n\
+§7Füge über §e/stats\n\
+§7einen hinzu.
+inv.main.league-item=§eLiga:
+inv.main.exp-format=§eExp: §7
+inv.main.exp-link=§7Klicken für Stats
+inv.main.next-league=§eNächste Liga: {0}
+inv.main.next-in=§7Du brauchst noch {0} Exp.
+inv.main.next-bedrock=§7Du musst einer der besten\n\
+§7fünf Spieler am Server\n\
+§7sein, um in die Liga\n\
+§7{0} zu kommen.
+inv.main.next-none=§7Du bist in der höchst-\n\
+§7möglichen Liga.\n\
+§eGratulation!
+inv.main.death-exp-title=§eExp-Verlust beim Tod
+inv.main.death-exp-lore=§7Wenn du stirbst,\n\
+§7verlierst du in\n\
+§7deiner aktuellen\n\
+§7Liga §e{0} §7Exp.
+inv.main.stats-top-link=§eBestenlisten
 
