Enchant tree icon item if TP > 0; Fixes #809

--- a/src/main/resources/me/minotopia/expvp/core_de.properties
+++ b/src/main/resources/me/minotopia/expvp/core_de.properties
@@ -62,4 +62,6 @@ inv.main.death-exp-lore=§7Wenn du stirbst,\n\
 §7deiner aktuellen\n\
 §7Liga §e{0} §7Exp.
 inv.main.stats-top-link=§eBestenlisten
+inv.tree.no-tp=§cDu hast keine Talentpunkte.
+inv.tree.tp-count=§aDu hast {0}.
 
