--- a/src/main/resources/me/minotopia/expvp/cmd_de.properties
+++ b/src/main/resources/me/minotopia/expvp/cmd_de.properties
@@ -5,6 +5,9 @@
 # This work is protected by international copyright laws and licensed
 # under the license terms which can be found at src/main/resources/LICENSE.txt.
 #
+menu.info.desc=Zeigt Versionsinfo
+menu.root.desc=Zeigt das Hauptmenü
+skills.root.desc=Zeigt Skilltrees
 splink.link.desc=Verlinkt einen Mapwahlknopf
 splink.link.help=Verlinkt einen Knopf\n\
 zur Stimmenerfassung\n\
