--- a/src/main/resources/me/minotopia/expvp/admin_de.properties
+++ b/src/main/resources/me/minotopia/expvp/admin_de.properties
@@ -59,3 +59,4 @@ tree.info.lang-files=Du kannst die Namen in den Dateien lang/tree.properties und
 spawn.link.session-start=Betätige jetzt den Knopf, den du verlinken möchtest.
 spawn.unlink.session-start=Betätige jetzt den Knopf, den du entlinken möchtest.
 spawn.link.done=Verlinkung erfolgreich.
+ignore.inv=Deine magischen Adminkräfte haben dir erlaubt, dieses Inventar zu öffnen.
