Fix colour typo in German lang

--- a/src/main/resources/lang/core_de.properties
+++ b/src/main/resources/lang/core_de.properties
@@ -29,7 +29,7 @@ research.already=\n\
 §abereits erforscht.
 research.notyet=\n\
 §cDu kannst diesen Skill\n\
-§anoch nicht erforschen.
+§cnoch nicht erforschen.
 research.possible=\n\
 §eDu kannst diesen Skill\n\
 §efür {0} erforschen.
