Add friend request model; #797

--- a/src/main/resources/lang/core.properties
+++ b/src/main/resources/lang/core.properties
@@ -62,4 +62,8 @@ inv.main.death-exp-lore=§7Every time you die,\n\
 inv.main.stats-top-link=§eLeaderboards
 inv.tree.no-tp=§cYou don't have any Talent Points.
 inv.tree.tp-count=§aYou have {0}.
+friend.req-inc={0} §6wants to be your friend.
+friend.req-inc-btn=[Accept]
+friend.req-revoke={0} §6revoked their friendship request.
+friend.req-acc=§aYou're now friends with §2{0}§a!
 
