--- a/src/main/resources/lang/core_de.properties
+++ b/src/main/resources/lang/core_de.properties
@@ -64,4 +64,8 @@ inv.main.death-exp-lore=§7Wenn du stirbst,\n\
 inv.main.stats-top-link=§eBestenlisten
 inv.tree.no-tp=§cDu hast keine Talentpunkte.
 inv.tree.tp-count=§aDu hast {0}.
+friend.req-inc={0} §6möchte dein Freund sein.
+friend.req-inc-btn=[Akzeptieren]
+friend.req-revoke={0} §6hat die Freundschaftsanfrage zurückgezogen.
+friend.req-acc=§aDu bist jetzt mit §2{0} §abefreundet!
 
