--- a/src/main/resources/lang/error.properties
+++ b/src/main/resources/lang/error.properties
@@ -8,6 +8,11 @@
 db.hibernate-misc=Error talking to the database.
 db.hibernate-rollback=Error talking to the database, rollback.
 db.other=Error related to the database.
+friend.existing-fs=You already have a friend. You may end that friendship using /fs end.
+friend.no-request=You don't have any pending request.
+friend.pending-request=You still have a pending friend request. You need to cancel\
+ that before you can make a new request.
+friend.self-friend=You may not befriend yourself.
 inv.invalid-slot=Invalid slot ID "{0}".
 player.multiple=There are multiple players matching your criteria. Try querying by UUID.
 player.unknown=There is no player matching "{0}".
