--- a/src/main/resources/lang/error_de.properties
+++ b/src/main/resources/lang/error_de.properties
@@ -8,6 +8,11 @@
 db.hibernate-misc=Fehler bei der Kommunikation mit der Datenbank.
 db.hibernate-rollback=Fehler bei der Kommunikation mit der Datenbank, Rollback.
 db.other=Fehler während der Kommunikation mit der Datenbank.
+friend.existing-fs=Du bist bereits befreundet. Beende deine aktuelle Freundschaft mit /fs end.
+friend.no-request=Du hast keine laufende Anfrage.
+friend.pending-request=Du hast noch eine laufende Freundschaftsanfrage. Du musst\
+ diese zuerst abbrechen, bevor du eine neue verschicken kannst.
+friend.self-friend=Du kannst dich nicht mit dir selber befreunden.
 inv.invalid-slot=Invalide Slot-ID: "{0}"
 player.multiple=Deine Anfrage trifft auf mehrere Spieler zu. Versuche eine Abfrage nach UUID.
 player.unknown=Dieser Spieler ist unbekannt: "{0}"
