Add /fs command; Fixes #797

--- a/src/main/resources/lang/core_de.properties
+++ b/src/main/resources/lang/core_de.properties
@@ -68,4 +68,8 @@ friend.req-inc={0} §6möchte dein Freund sein.
 friend.req-inc-btn=[Akzeptieren]
 friend.req-revoke={0} §6hat die Freundschaftsanfrage zurückgezogen.
 friend.req-acc=§aDu bist jetzt mit §2{0} §abefreundet!
+friend.req-sent=Deine Anfrage wurde abgesendet und ist für fünf Minuten gültig.
+friend.fs-ended=Deine Freundschaft wurde aufgelöst.
+friend.no-such-req=Du hast keine Anfrage von diesem Spieler erhalten.
+friend.revoke=Du hast deine Freundschaftsanfrage zurückgezogen.
 
