--- a/src/main/resources/lang/error.properties
+++ b/src/main/resources/lang/error.properties
@@ -8,6 +8,7 @@
 db.hibernate-misc=Error talking to the database.
 db.hibernate-rollback=Error talking to the database, rollback.
 db.other=Error related to the database.
+friend.existing-check=There may only be a single friendship for a player.
 friend.existing-fs=You already have a friend. You may end that friendship using /fs end.
 friend.no-request=You don't have any pending request.
 friend.pending-request=You still have a pending friend request. You need to cancel\
