--- a/src/main/resources/lang/error_de.properties
+++ b/src/main/resources/lang/error_de.properties
@@ -8,6 +8,7 @@
 db.hibernate-misc=Fehler bei der Kommunikation mit der Datenbank.
 db.hibernate-rollback=Fehler bei der Kommunikation mit der Datenbank, Rollback.
 db.other=Fehler während der Kommunikation mit der Datenbank.
+friend.existing-check=Ein Spieler kann nur maximal eine Freundschaft haben.
 friend.existing-fs=Du bist bereits befreundet. Beende deine aktuelle Freundschaft mit /fs end.
 friend.no-request=Du hast keine laufende Anfrage.
 friend.pending-request=Du hast noch eine laufende Freundschaftsanfrage. Du musst\
