--- a/src/main/resources/lang/core.properties
+++ b/src/main/resources/lang/core.properties
@@ -66,4 +66,8 @@ friend.req-inc={0} §6wants to be your friend.
 friend.req-inc-btn=[Accept]
 friend.req-revoke={0} §6revoked their friendship request.
 friend.req-acc=§aYou're now friends with §2{0}§a!
+friend.req-sent=Your request has been sent and will be valid for five minutes.
+friend.fs-ended=Your friendship has been ended.
+friend.no-such-req=You did not receive a request from this player.
+friend.revoke=You revoked your friendship request.
 
