Add language to /fs command

--- a/src/main/resources/lang/cmd.properties
+++ b/src/main/resources/lang/cmd.properties
@@ -5,6 +5,12 @@
 # This work is protected by international copyright laws and licensed
 # under the license terms which can be found at src/main/resources/LICENSE.txt.
 #
+friend.accept.desc=Accepts a friendship request
+friend.accept.usage=[UUID of friend]
+friend.add.desc=Adds a friend
+friend.add.usage=[player]
+friend.cancel.desc=Cancels your friendship request
+friend.end.desc=Ends your friendship
 menu.info.desc=Shows version info
 menu.root.desc=Shows the main menu
 skills.root.desc=Shows skill trees
