--- a/src/main/resources/lang/cmd_de.properties
+++ b/src/main/resources/lang/cmd_de.properties
@@ -5,6 +5,12 @@
 # This work is protected by international copyright laws and licensed
 # under the license terms which can be found at src/main/resources/LICENSE.txt.
 #
+friend.accept.desc=Akzeptiert eine Freundschaftsanfrage
+friend.accept.usage=[UUID des Freundes]
+friend.add.desc=Fügt einen Freund hinzu
+friend.add.usage=[Spieler]
+friend.cancel.desc=Zieht deine Freundschaftsanfrage zurück
+friend.end.desc=Beendet deine Freundschaft
 menu.info.desc=Zeigt Versionsinfo
 menu.root.desc=Zeigt das Hauptmenü
 skills.root.desc=Zeigt Skilltrees
