Add chat format; Fixes #800

--- a/src/main/resources/lang/core.properties
+++ b/src/main/resources/lang/core.properties
@@ -70,4 +70,6 @@ friend.req-sent=Your request has been sent and will be valid for five minutes.
 friend.fs-ended=Your friendship has been ended.
 friend.no-such-req=You did not receive a request from this player.
 friend.revoke=You revoked your friendship request.
+stats-link=§7Click here to see\n\
+§7{0}'s stats.
 
