--- a/src/main/resources/lang/core_de.properties
+++ b/src/main/resources/lang/core_de.properties
@@ -72,4 +72,7 @@ friend.req-sent=Deine Anfrage wurde abgesendet und ist für fünf Minuten gülti
 friend.fs-ended=Deine Freundschaft wurde aufgelöst.
 friend.no-such-req=Du hast keine Anfrage von diesem Spieler erhalten.
 friend.revoke=Du hast deine Freundschaftsanfrage zurückgezogen.
+stats-link=§7Klicke hier, um\n\
+§7die Stats von\n\
+§7{0} zu sehen.
 
