Add language message on join and /lang command; Fixes #791

--- a/src/main/resources/lang/cmd.properties
+++ b/src/main/resources/lang/cmd.properties
@@ -11,6 +11,10 @@ friend.add.desc=Adds a friend
 friend.add.usage=[player]
 friend.cancel.desc=Cancels your friendship request
 friend.end.desc=Ends your friendship
+lang.auto.desc=Tries to figure out your language automatically
+lang.de.desc=Ändert deine Sprache auf Deutsch
+lang.en.desc=Changes your language to English
+lang.root.desc=Shows your current language
 menu.info.desc=Shows version info
 menu.root.desc=Shows the main menu
 skills.root.desc=Shows skill trees
