--- a/src/main/resources/lang/cmd_de.properties
+++ b/src/main/resources/lang/cmd_de.properties
@@ -11,6 +11,10 @@ friend.add.desc=Fügt einen Freund hinzu
 friend.add.usage=[Spieler]
 friend.cancel.desc=Zieht deine Freundschaftsanfrage zurück
 friend.end.desc=Beendet deine Freundschaft
+lang.auto.desc=Erkennt deine Sprache automatisch
+lang.de.desc=Ändert deine Sprache auf Deutsch
+lang.en.desc=Changes your language to English
+lang.root.desc=Zeigt deine aktuelle Sprache
 menu.info.desc=Zeigt Versionsinfo
 menu.root.desc=Zeigt das Hauptmenü
 skills.root.desc=Zeigt Skilltrees
