--- a/src/main/resources/lang/core.properties
+++ b/src/main/resources/lang/core.properties
@@ -72,4 +72,14 @@ friend.no-such-req=You did not receive a request from this player.
 friend.revoke=You revoked your friendship request.
 stats-link=§7Click here to see\n\
 §7{0}'s stats.
+lang.auto-selected=§4IMPORTANT INFORMATION / WICHTIGE INFORMATION:\n\
+§eWe have detected that your client language is English.\n\
+§eIf you'd like to switch to German, type /lang de\
+§eWenn du Expvp auf Deutsch verwenden möchtest, tippe /lang de\n\
+§6To hide this message, type /lang en
+lang.manual-selected=Your language is English. Type /lang to change.
+lang.current-locale=Your current locale is English.\n\
+Type /lang de to switch to German.\n\
+Type /lang auto to auto-detect.
+lang.changed-locale=Your language is now English.
 
