--- a/src/main/resources/lang/core_de.properties
+++ b/src/main/resources/lang/core_de.properties
@@ -75,4 +75,14 @@ friend.revoke=Du hast deine Freundschaftsanfrage zurückgezogen.
 stats-link=§7Klicke hier, um\n\
 §7die Stats von\n\
 §7{0} zu sehen.
+lang.auto-selected=§4WICHTIGE INFORMATION / IMPORTANT INFORMATION:\n\
+§eDeine Sprache wurde als Deutsch erkannt.\n\
+§eUm zu Englisch zu wechseln, tippe /lang en\n\
+§eTo use Expvp in English, type /lang en\
+§6Um diese Nachricht nicht mehr zu erhalten, tippe /lang de
+lang.manual-selected=Deine Sprache ist Deutsch. Tippe /lang, um das zu ändern.
+lang.current-locale=Deine aktuelle Sprache ist Deutsch.\n\
+Tippe /lang en, um auf Englisch zu wechseln.\n\
+Tippe /lang auto, um deine Sprache automatisch zu erkennen.
+lang.changed-locale=Deine Sprache ist jetzt Deutsch.
 
