Add missing newline in German auto-selection message

--- a/src/main/resources/lang/core_de.properties
+++ b/src/main/resources/lang/core_de.properties
@@ -78,7 +78,7 @@ stats-link=§7Klicke hier, um\n\
 lang.auto-selected=§4WICHTIGE INFORMATION / IMPORTANT INFORMATION:\n\
 §eDeine Sprache wurde als Deutsch erkannt.\n\
 §eUm zu Englisch zu wechseln, tippe /lang en\n\
-§eTo use Expvp in English, type /lang en\
+§eTo use Expvp in English, type /lang en\n\
 §6Um diese Nachricht nicht mehr zu erhalten, tippe /lang de
 lang.manual-selected=Deine Sprache ist Deutsch. Tippe /lang, um das zu ändern.
 lang.current-locale=Deine aktuelle Sprache ist Deutsch.\n\
