Fix a few ' escapes in locales

--- a/src/main/resources/lang/core.properties
+++ b/src/main/resources/lang/core.properties
@@ -41,7 +41,7 @@ plural-none=no
 inv.main.title=§e§lExpvp Main Menu
 inv.main.armor-link=§eComing Soon
 inv.main.armor-reset-link=§eComing Soon
-inv.main.no-friend=§7You don't have a friend.\n\
+inv.main.no-friend=§7You don''t have a friend.\n\
 §7Add one via §e/stats§7.
 inv.main.league-item=§eLeague:
 inv.main.exp-format=§eExp: §7
@@ -52,7 +52,7 @@ inv.main.next-bedrock=§7You need to be one of the\n\
 §7top five players on the\n\
 §7server to get to the\n\
 §7{0} league.
-inv.main.next-none=§7You've reached the highest\n\
+inv.main.next-none=§7You''ve reached the highest\n\
 §7possible league.\n\
 §eCongratulations!
 inv.main.death-exp-title=§eExp loss on death
@@ -60,21 +60,21 @@ inv.main.death-exp-lore=§7Every time you die,\n\
 §7you lose §e{0}§7 Exp\n\
 §7in your current league.
 inv.main.stats-top-link=§eLeaderboards
-inv.tree.no-tp=§cYou don't have any Talent Points.
+inv.tree.no-tp=§cYou don''t have any Talent Points.
 inv.tree.tp-count=§aYou have {0}.
 friend.req-inc={0} §6wants to be your friend.
 friend.req-inc-btn=[Accept]
 friend.req-revoke={0} §6revoked their friendship request.
-friend.req-acc=§aYou're now friends with §2{0}§a!
+friend.req-acc=§aYou''re now friends with §2{0}§a!
 friend.req-sent=Your request has been sent and will be valid for five minutes.
 friend.fs-ended=Your friendship has been ended.
 friend.no-such-req=You did not receive a request from this player.
 friend.revoke=You revoked your friendship request.
 stats-link=§7Click here to see\n\
-§7{0}'s stats.
+§7{0}''s stats.
 lang.auto-selected=§4IMPORTANT INFORMATION / WICHTIGE INFORMATION:\n\
 §eWe have detected that your client language is English.\n\
-§eIf you'd like to switch to German, type /lang de\
+§eIf you''d like to switch to German, type /lang de\
 §eWenn du Expvp auf Deutsch verwenden möchtest, tippe /lang de\n\
 §6To hide this message, type /lang en
 lang.manual-selected=Your language is English. Type /lang to change.
