--- a/src/main/resources/lang/admin.properties
+++ b/src/main/resources/lang/admin.properties
@@ -46,11 +46,11 @@ ui.skilledit.remove-children-first=§cRemove child skills\n\
 §cthis skill.
 ui.skilledit.click-to-remove=§aClick to remove
 ui.skilledit.click-to-add=§aClick to add
-ui.skilledit.rm-children-first=You have to remove this skill's children first before you can remove it.
+ui.skilledit.rm-children-first=You have to remove this skill''s children first before you can remove it.
 ui.skilledit.rm-subskill-success=Successfully removed child skill.
 ui.skillsel.title=§9§lSelect skill §9({0}/{1})
 ui.skilledit.unrederable=Unable to render this skill tree into an inventory.\n\
-Players won't be able to see this tree. Try removing the\n\
+Players won''t be able to see this tree. Try removing the\n\
 outermost skill manually. This should not happen.
 ui.skilledit.add-subskill-success=Successfully added child skill.
 ui.skilledit.unable-to-save=Unable to save tree.
