Actually display Exp count lol

--- a/src/main/resources/lang/core.properties
+++ b/src/main/resources/lang/core.properties
@@ -44,7 +44,7 @@ inv.main.armor-reset-link=§eComing Soon
 inv.main.no-friend=§7You don''t have a friend.\n\
 §7Add one via §e/stats§7.
 inv.main.league-item=§eLeague:
-inv.main.exp-format=§eExp: §7
+inv.main.exp-format=§eExp: §7{0}
 inv.main.exp-link=§7Click for stats
 inv.main.next-league=§eNext league: {0}
 inv.main.next-in=§7You still need {0} Exp.
