Fix wrong setting of colours

--- a/src/main/resources/lang/core_de.properties
+++ b/src/main/resources/lang/core_de.properties
@@ -45,7 +45,7 @@ inv.main.no-friend=§7Du hast keinen Freund.\n\
 §7Füge über §e/stats\n\
 §7einen hinzu.
 inv.main.league-item=§eLiga:
-inv.main.exp-format=§eExp: §7
+inv.main.exp-format=§eExp: §7{0}
 inv.main.exp-link=§7Klicken für Stats
 inv.main.next-league=§eNächste Liga: {0}
 inv.main.next-in=§7Du brauchst noch {0} Exp.
