Display a message in /fs end if not friend

--- a/src/main/resources/lang/core.properties
+++ b/src/main/resources/lang/core.properties
@@ -82,4 +82,5 @@ lang.current-locale=Your current locale is English.\n\
 Type /lang de to switch to German.\n\
 Type /lang auto to auto-detect.
 lang.changed-locale=Your language is now English.
+friend.no-friend=You don't have a friend.
 
