--- a/src/main/resources/lang/core_de.properties
+++ b/src/main/resources/lang/core_de.properties
@@ -85,4 +85,5 @@ lang.current-locale=Deine aktuelle Sprache ist Deutsch.\n\
 Tippe /lang en, um auf Englisch zu wechseln.\n\
 Tippe /lang auto, um deine Sprache automatisch zu erkennen.
 lang.changed-locale=Deine Sprache ist jetzt Deutsch.
+friend.no-friend=Du hast keinen Freund.
 
