Fix leaking league names in league.change

--- a/src/main/resources/lang/score.properties
+++ b/src/main/resources/lang/score.properties
@@ -20,8 +20,8 @@ league.EMERALD.chat-format=: §f{0}
 league.DIAMOND.chat-format=: §b§l>>> §f{0}
 league.OBSIDIAN.chat-format=: §2§l>>> §f{0}
 league.BEDROCK.chat-format=: §c§l>§0§l>§c§l> §f{0}
-league.change.up=You have been upgraded to the {0} league because of your extraordinary fighting performance. Congratulations!
-league.change.down=You have been down-ranked to the {0} league.
+league.change.up=§aYou have been upgraded to the {0} §aleague because of your extraordinary fighting performance. Congratulations!
+league.change.down=§6You have been down-ranked to the {0} §6league.
 tp.one=Talent Point
 tp.many=Talent Points
 tp.actionbar.lose=§4- {0}
