--- a/src/main/resources/lang/score_de.properties
+++ b/src/main/resources/lang/score_de.properties
@@ -20,8 +20,8 @@ league.EMERALD.chat-format=: §f{0}
 league.DIAMOND.chat-format=: §b§l>>> §f{0}
 league.OBSIDIAN.chat-format=: §1§l>>> §f{0}
 league.BEDROCK.chat-format=: §c§l>§0§l>§c§l> §f{0}
-league.change.up=Du wurdest aufgrund deiner Kampfkünste in die Liga {0} heraufgestuft. Herzlichen Glückwunsch!
-league.change.down=Du wurdest in die Liga {0} zurückgestuft.
+league.change.up=§aDu wurdest aufgrund deiner Kampfkünste in die Liga {0} §aheraufgestuft. Herzlichen Glückwunsch!
+league.change.down=§6Du wurdest in die Liga {0} §6zurückgestuft.
 tp.one=Talentpunkt
 tp.many=Talentpunkte
 tp.actionbar.lose=§4- {0}
