Add kill streak service with handling for n/5th kill; #803

--- a/src/main/resources/lang/score.properties
+++ b/src/main/resources/lang/score.properties
@@ -30,3 +30,5 @@ kill.many=kills
 tp.actionbar=§e{0} - next after {1}
 kill.victim=You were killed and therefore lost {0} Exp.
 kill.culprit=You killed somebody and therefore gained {0} Exp.
+streak.highscore=You have reached a new best kill streak! ({0})
+streak.fifth={0} is on a {1} kill streak! Beware!
