--- a/src/main/resources/lang/score_de.properties
+++ b/src/main/resources/lang/score_de.properties
@@ -30,3 +30,5 @@ kill.many=Kills
 tp.actionbar=§e{0} - nächster nach {1}
 kill.victim=Du wurdest getötet und verlierst daher {0} Exp.
 kill.culprit=Du hast jemanden getötet und dafür {0} Exp bekommen.
+streak.highscore=Du hast eine neue beste Killstreak! ({0})
+streak.fifth=Vorsicht: {0} ist jetzt auf einer {1}er-Killstreak! 
