Add basic /stats command; Fixes #796

--- a/src/main/resources/lang/cmd.properties
+++ b/src/main/resources/lang/cmd.properties
@@ -25,3 +25,5 @@ splink.link.usage=[map id]
 splink.unlink.desc=Unlinks a map vote button
 splink.unlink.help=Unlinks a button from a\n\
 map for voting.
+stats.root.desc=Shows stats
+stats.root.usage=<name>
