--- a/src/main/resources/lang/cmd_de.properties
+++ b/src/main/resources/lang/cmd_de.properties
@@ -26,3 +26,5 @@ splink.link.usage=[Spawn-ID]
 splink.unlink.desc=Entlinkt einen Mapwahlknopf
 splink.unlink.help=Entlinkt einen Knopf\n\
 von der Mapwahl.
+stats.root.desc=Zeigt Stats
+stats.root.usage=<Name>
