--- a/src/main/resources/lang/core.properties
+++ b/src/main/resources/lang/core.properties
@@ -83,4 +83,8 @@ Type /lang de to switch to German.\n\
 Type /lang auto to auto-detect.
 lang.changed-locale=Your language is now English.
 friend.no-friend=You don't have a friend.
+number.one={0}st
+number.two={0}nd
+number.three={0}rd
+number.other={0}th
 
