--- a/src/main/resources/lang/core_de.properties
+++ b/src/main/resources/lang/core_de.properties
@@ -86,4 +86,8 @@ Tippe /lang en, um auf Englisch zu wechseln.\n\
 Tippe /lang auto, um deine Sprache automatisch zu erkennen.
 lang.changed-locale=Deine Sprache ist jetzt Deutsch.
 friend.no-friend=Du hast keinen Freund.
+number.one={0}.
+number.two={0}.
+number.three={0}.
+number.other={0}.
 
