--- a/src/main/resources/lang/score.properties
+++ b/src/main/resources/lang/score.properties
@@ -32,3 +32,13 @@ kill.victim=You were killed and therefore lost {0} Exp.
 kill.culprit=You killed somebody and therefore gained {0} Exp.
 streak.highscore=You have reached a new best kill streak! ({0})
 streak.fifth={0} is on a {1} kill streak! Beware!
+stats.current-kds=§6Currently: §e{0} §6/ §e{1} §6= K/D: §e{3,number,#.##}
+death.one=death
+death.many=deaths
+stats.overall-kds=§6Overall: §e{0} §6/ §e{1} §6= K/D: §e{3,number,#.##}
+stats.exp-related=§6Exp: §e{0} §6(§e{1}§6) §6 -> League: {2}
+stats.header={0}'s Stats
+stats.friend-stats=§6Friend: §e{0} §6(§e{1} §6Exp, §e{2,number,#.##} §6overall K/D)
+stats.no-friend=§6This player does not have a friend yet.
+stats.friend-add=[+ Friend]
+stats.best-streak-skills=§6Best kill streak: §e{0}§6, §e{1} §6skills researched.
