--- a/src/main/resources/lang/score_de.properties
+++ b/src/main/resources/lang/score_de.properties
@@ -32,3 +32,13 @@ kill.victim=Du wurdest getötet und verlierst daher {0} Exp.
 kill.culprit=Du hast jemanden getötet und dafür {0} Exp bekommen.
 streak.highscore=Du hast eine neue beste Killstreak! ({0})
 streak.fifth=Vorsicht: {0} ist jetzt auf einer {1}er-Killstreak! 
+stats.current-kds=§6Aktuell: §e{0} §6/ §e{1} §6= K/D: §e{3,number,#.##}
+death.one=Tod
+death.many=Tode
+stats.overall-kds=§6Gesamt: §e{0} §6/ §e{1} §6= K/D: §e{3,number,#.##}
+stats.exp-related=§6Exp: §e{0} §6(§e{1}§6) §6 -> Liga: {2}
+stats.header=Stats von {0}
+stats.friend-stats=§6Freund: §e{0} §6(§e{1} §6Exp, §e{2,number,#.##} §6Gesamt-K/D)
+stats.no-friend=§6Dieser Spieler hat noch keinen Freund.
+stats.friend-add=[+ Freund]
+stats.best-streak-skills=§6Beste Killstreak: §e{0}§6, §e{1} §6Skills erforscht.
