Make /stats use @Optional

--- a/src/main/resources/lang/error_de.properties
+++ b/src/main/resources/lang/error_de.properties
@@ -21,6 +21,7 @@ reg.already-exists=Es gibt bereits einen {0} mit der ID "{1}".
 reg.error-saving=Fehler beim Speichern vom {0} mit der ID "{0}"
 reg.there-is-no=Es gibt keinen {0} mit der ID "{1}"
 skill.handlerspec-slash=HandlerSpecs müssen mit / beginnen.
+stats.need-player=Nur Spieler können /stats ohne Argumente verwenden.
 stats.unknown=Entschuldige, aber der Spieler "{0}" ist uns nicht bekannt.
 tp.insufficient-tp=Du brauchst dafür {0}, hast aber nur {1}.
 tree.missing-parent=§cDu musst zuerst {1} §cerforschen, bevor du {0} §cerforschen kannst.
