--- a/src/main/resources/lang/error.properties
+++ b/src/main/resources/lang/error.properties
@@ -21,6 +21,7 @@ reg.already-exists=There is already a {0} with ID "{1}".
 reg.error-saving=Error saving {0} with ID "{1}"
 reg.there-is-no=There is no {0} with ID "{1}".
 skill.handlerspec-slash=HandlerSpecs must start with a slash (/).
+stats.need-player=Only players can call /stats without arguments.
 stats.unknown=Sorry, there's no player on record matching "{0}".
 tp.insufficient-tp=You need {0} for this, but only have {1}.
 tree.missing-parent=§cYou need to research {1} §cfirst before you can research {0}§c.
