Properly escape single quote in /stats header

--- a/src/main/resources/lang/score.properties
+++ b/src/main/resources/lang/score.properties
@@ -37,7 +37,7 @@ death.one=death
 death.many=deaths
 stats.overall-kds=§6Overall: §e{0} §6/ §e{1} §6= K/D: §e{3,number,#.##}
 stats.exp-related=§6Exp: §e{0} §6(§e{1}§6) §6 -> League: {2}
-stats.header={0}'s Stats
+stats.header={0}§e''s Stats
 stats.friend-stats=§6Friend: §e{0} §6(§e{1} §6Exp, K/D: §e{2,number,#.##}§6)
 stats.no-friend=§6This player does not have a friend yet.
 stats.friend-add=[+ Friend]
