Add a five second delay to /spawn; Fixes #816

--- a/src/main/resources/lang/core.properties
+++ b/src/main/resources/lang/core.properties
@@ -87,4 +87,6 @@ number.one={0}st
 number.two={0}nd
 number.three={0}rd
 number.other={0}th
+spawn.stand-still=You'll be teleported in five seconds. Please do not move or do anything silly until then.
+spawn.tp-abort=You failed to stand still. Please try again.
 
