--- a/src/main/resources/lang/core_de.properties
+++ b/src/main/resources/lang/core_de.properties
@@ -90,4 +90,6 @@ number.one={0}.
 number.two={0}.
 number.three={0}.
 number.other={0}.
+spawn.stand-still=Du wirst in fünf Sekunden telportiert. Bitte nicht bewegen!
+spawn.tp-abort=Du konntest nicht stillhalten. Bitte versuche es erneut.
 
