Message on map change

--- a/src/main/resources/lang/core.properties
+++ b/src/main/resources/lang/core.properties
@@ -89,4 +89,5 @@ number.three={0}rd
 number.other={0}th
 spawn.stand-still=You'll be teleported in five seconds. Please do not move or do anything silly until then.
 spawn.tp-abort=You failed to stand still. Please try again.
+spawn.new-spawn=§6The selected spawn is {0} §6by {0}§6. You'll be teleported.
 
