--- a/src/main/resources/lang/core_de.properties
+++ b/src/main/resources/lang/core_de.properties
@@ -92,4 +92,5 @@ number.three={0}.
 number.other={0}.
 spawn.stand-still=Du wirst in fünf Sekunden telportiert. Bitte nicht bewegen!
 spawn.tp-abort=Du konntest nicht stillhalten. Bitte versuche es erneut.
+spawn.new-spawn=§6Der gewählte Spawn ist {0} §6von {0}§6. Du wirst teleportiert.
 
