Show kill assists in /stats; #799

--- a/src/main/resources/lang/score.properties
+++ b/src/main/resources/lang/score.properties
@@ -35,7 +35,7 @@ streak.fifth={0} is on a {1} kill streak! Beware!
 stats.current-kds=§6Currently: §e{0} §6/ §e{1} §6= K/D: §e{2,number,#.##}
 death.one=death
 death.many=deaths
-stats.overall-kds=§6Overall: §e{0} §6/ §e{1} §6= K/D: §e{2,number,#.##}
+stats.overall-kds=§6Overall: §e{0} §6/ §e{1} §6= K/D: §e{2,number,#.##}§6, §e{3} kill assists
 stats.exp-related=§6Exp: §e{0} §6(§e{1}§6) §6 -> League: {2}
 stats.header={0}§e''s Stats
 stats.friend-stats=§6Friend: §e{0} §6(§e{1} §6Exp, K/D: §e{2,number,#.##}§6)
