Record kill assists in KillDeathService; Fixes #799

--- a/src/main/resources/lang/score.properties
+++ b/src/main/resources/lang/score.properties
@@ -44,3 +44,4 @@ stats.friend-add=[+ Friend]
 stats.best-streak-skills=§6Best kill streak: §e{0}§6, §e{1} §6skills researched.
 stats.friend-tooltip=§7Click here to see\n\
 §7friend's stats
+kill.assist=You assisted your friend in killing somebody and got {0} Exp.
