--- a/src/main/resources/lang/score_de.properties
+++ b/src/main/resources/lang/score_de.properties
@@ -44,3 +44,4 @@ stats.friend-add=[+ Freund]
 stats.best-streak-skills=§6Beste Killstreak: §e{0}§6, §e{1} §6Skills erforscht.
 stats.friend-tooltip=§7Hier klicken für die\n\
 §7Stats des Freundes
+kill.assist=Du hast deinem Freund geholfen, jemanden zu töten und bekommst dafür {0} Exp.
