Fix kill assists colour in /stats

--- a/src/main/resources/lang/score_de.properties
+++ b/src/main/resources/lang/score_de.properties
@@ -35,7 +35,7 @@ streak.fifth=Vorsicht: {0} ist jetzt auf einer {1}er-Killstreak!
 stats.current-kds=§6Aktuell: §e{0} §6/ §e{1} §6= K/D: §e{2,number,#.##}
 death.one=Tod
 death.many=Tode
-stats.overall-kds=§6Gesamt: §e{0} §6/ §e{1} §6= K/D: §e{2,number,#.##}§6, §e{3} Killassists
+stats.overall-kds=§6Gesamt: §e{0} §6/ §e{1} §6= K/D: §e{2,number,#.##}§6, §e{3} §6Killassists
 stats.exp-related=§6Exp: §e{0} §6(§e{1}§6) §6 -> Liga: {2}
 stats.header=Stats von {0}
 stats.friend-stats=§6Freund: §e{0} §6(§e{1} §6Exp, K/D: §e{2,number,#.##}§6)
