--- a/src/main/resources/lang/core_de.properties
+++ b/src/main/resources/lang/core_de.properties
@@ -93,4 +93,6 @@ number.other={0}.
 spawn.stand-still=Du wirst in fünf Sekunden telportiert. Bitte nicht bewegen!
 spawn.tp-abort=Du konntest nicht stillhalten. Bitte versuche es erneut.
 spawn.new-spawn=§6Der gewählte Spawn ist {0} §6von {1}§6. Du wirst teleportiert.
+chat.nobody-hears=Du wirst nicht gehört, weil niemand da ist.
+chat.bypass-of=Deine magischen Adminkräfte erlauben dir, {0} zu umgehen.
 
